_assets/css/pages/_projects.scss
// PROJECTS customization

.projects-banner {
    .usa-hero {
      background-image: url(asset_path("stock/USDC_AgencyBanner.png"));
       //@include u-bg("primary-dark");
       @include u-text("primary-dark");
        background-position: center center;
        position: relative;
        min-height: 600px;
        //@include u-margin-bottom(4);
        max-width: 100%;

        // screen size adjustments
        @include at-media-max("desktop-lg") {
           // background-position: 30% top;
          // margin-bottom: 15%;
        }

        @include at-media-max("desktop") {
          // background-image: none;
          // background-color: #1a2c85;
            .grid-container {
                @include u-padding-x(0);
            }
        }

         @include at-media-max("mobile-lg") {
            @include u-padding-y(0);
            //background-position: 40% top;
            min-height: unset;
         }

        // callout container
        .usa-hero__callout {
            @include grid-col(6);
            //@include grid-offset(0);
            @include u-margin-top(15);
            text-align: center;

            // screen size adjustments
            @include at-media-max("desktop") {
                @include grid-col(auto);
                @include grid-offset(none);
                @include u-margin-top(0);
                background-color: rgba(255, 255, 255, 0.6);
                position: relative;
                bottom: 0;
            }

            @include at-media-max("mobile-lg") {
                position: relative;
                min-height: 430px;

                .content {
                    @include u-padding-x(2);
                    @include u-padding-bottom(3);
                    @include u-margin-bottom(2);
                    position: relative;
                    left: 0;
                    bottom: 0;
                }
            }

            // subtext
            h2 {
               // @include u-text("primary-dark");
                @include u-margin-top(3);
                @include u-margin-bottom(0);
            }
        }
    }
    @media (min-width: 1024px) {
      .usa-hero {
        height: 100px;
      }
      .usa-hero__heading{
        margin-top: 35px;
      }
    }
    
}


//Second Section
.project-section-two{
  max-width: 90%;
  position: relative;
  min-height: 250px;
  //left: 50%;
  margin: auto;
  //max-height: 300px;
}


.host-paragraph{
  @include u-bg('gray-5');
  text-align: center;
  line-height: 1.5;
  //position: relative;
  top: 20%;
}
.inaugural-styling{
  text-align: center;
  @include u-margin-right(10);
  @include u-margin-left(7);
  @include at-media-max("mobile-lg") {
    @include u-margin-right(2);
    @include u-margin-left(2);
  }
}
@media(min-width: 1024px) and (max-width: 1327px){
  .inaugural-styling{
    margin-right: 14rem;
    margin-left: 11.5rem;
  }
}

.project-agency-logos{
  display: flex;
    flex-wrap: wrap;
    justify-content: center;
    @include u-margin-x(2);
    padding: 0 12rem;
    @include at-media-max("desktop") {
      //margin: 0 7rem;
      @include u-margin-x(2);
    @include u-padding-x(8);
    }
}

.projects-details{
  @include u-bg('gray-5');
}

  .project-items{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
  }

  .project-items > div {
    flex: 50%;
  }
  
  .usa-button--accent-cool{
    @include u-bg('primary-vivid');
    color: white;
  }
  .agency-card--specialty {
    //font-family: $theme-font-type-serif;
    color: #ffffff;
    @include u-margin-bottom(0.5);
    ul {
      @include u-padding(0);
      list-style: none;
      border-radius: 10px;
      li {
        @include u-margin-bottom(2.0);
        @include u-margin-right(0.5);
        span {
          @include u-font('sans', 1);
          @include u-padding(1);
          @include u-bg('red-cool-10v');
          border-radius: 40px;
          &.Equity {
            background-color: #58B4FF;
            color: #000000;
          }
          &.Health {
            background-color: #FACE00;
            color: #000000; 
          }
          &.Cybersecurity {
            background-color: #000000;
          }
          &.Public_experience {
            background-color: #9D1831;
          }
          &.Immigration {
            background-color: #1B2B85;
          }
          &.Capacity_Building {
            background-color: #C7C7C7;
            color: #000000;
          }
          &.Open_science {
            background-color: #70747B;
          }
        }
      }
    }
  }

  $project-item-border-radius: 5px;

  .project-item__outer {
    margin-bottom: 2rem;
    margin-right: 2rem;
  }
  
  .project-item__outer.hide {
    display: none;
  }
  
  .project-item {
    border-radius: $project-item-border-radius;
    box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.18);
    @include at-media('tablet') {
      height: 100%;
    }
  }
  
  .project-item__link,
  .project-item__link p {
    text-decoration: none;
  }
  
  .project-item__header {
    border-top-left-radius: $project-item-border-radius;
    border-top-right-radius: $project-item-border-radius;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    padding: 1rem;
    box-sizing: border-box;
  }
  
  .project-item__agency {
    @include u-font('serif', 'lg');
    @include u-text('primary-darker');
    //font-style: italic;
    @include u-margin-x(2);
  }
  
  .project-item__type {
    @include u-bg('primary-vivid');
    @include u-text('white');
    @include u-font('sans', '3xs');
    line-height: 13px;
    height: 24px;
    border-radius: 12px;
    padding-top: 5px;
    padding-left: 15px;
    padding-right: 15px;
    flex-shrink: 0;
  }
  
  .project-item__content {
    padding: 2rem 1rem;
    align-items: center;
    // @include at-media('tablet') {
    //   display: flex;
    //   flex-direction: row;
    // }

    .skill-sets{
      @include u-font('sans', 'sm');
      @include u-text('normal');
      //line-height: 1.45;
      font-size: 14px;
      width: 50%;
    }
  }
  
  .project-item__image {
    height: 165px;
    width: 100%;
    background-size: cover;
    background-position: center center;
  }
  
  .project-item__logo {
    height: auto;
    margin-bottom: 1rem;
    @include at-media('tablet') {
      margin-right: 1.4rem;
    }
  }
  
  .project-item__title {
    @include u-font('sans', 'sm');
    @include u-text('normal');
    //line-height: 1.45;
    font-size: 14px;
    margin: 0;
  }
  

.hide{
  display: none;
}

.show{
  display: flex;
}


.project-item-details{
  font-size: small;
}

//Skill & Impact Area Description Section
.project-skill-impact{
  color: #0076D6;
  //font-weight: bold;
  margin-block-end: auto;
}

.project-item-links{
  height: 20px;
}

.impact-descriptions{
  @include u-bg('gray-5');
}
.impact-list{
  font-weight: bold;
  display: flex;
  flex-wrap: wrap;
  margin-right: 10px;
}

//Agency Cards

 .projects-main{
   //max-width: 1200px;
   //margin: 50px 0;

   
   @include at-media('tablet') {
    display: flex;
   }
 }

.skill-styling{
  //display: flex;
  //flex-wrap: wrap;
  font-size: 16x;
  //@include u-font('sans', 'sm');
  color: #000000;
}

.learn-more {
  margin-bottom: 0.25rem;
}

.learn-more  a{
  //display: flex;
  margin-right: 10px;
}

//Filters
#projectFilters {
  p{
    font-weight: bold;
    margin-block-end: 0.5em;
  }
  p:not(:first-of-type){
    border-top: 2px solid #bbb;
    @include u-padding-top(2);
    }
}
  
.filter-checkbox{
  width: auto;
  font-size: small;
  line-height: 25px;

  label {
    //display: block;
    width: 100%;
    margin-bottom: 0.25em;
  }
  input {
    @include u-margin-right(1);
  }
}

